Fixed spacing and responsive issues in site layout

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,16 @@ h1, h2, h3, h4, h5, h5, p{
 
 h2{
     font-family: 'Great Vibes', cursive;
-    padding-left: 2.5%;
+}
+
+.portLink{
+    color:#59A0B0;
+    font-weight: 500;
+}
+
+.portLink:hover{
+    color:#59A0B0;
+    text-decoration: none;
 }
 
 header{
@@ -68,13 +77,15 @@ section{
     background-color: #fefefe;
 } 
 
-/* Horizontal Rule after H2 */
-.separation{
-    padding-bottom: 1em;
-    width: 95%;
-    border-top: 1px solid #ddecef;
+.boxPad{
+    padding: .5em 2.5%;
 }
 
+/* Horizontal Rule after H2 */
+.separation{
+    width: 100%;
+    border-top: 1px solid #ddecef;
+}
 
 /* About Image */
 .media img{
@@ -84,7 +95,7 @@ section{
 
 /* Form Styles */
 form{
-    padding: 5px 2.5%;
+    padding: 1em 0 0;
 }
 
 form .form-label{
@@ -165,8 +176,8 @@ footer{
 
      /* About Image */
      .media img{
-        width: 40%;
-        padding: 0 2.5% 1em 2.5%;
+        width: 50%;
+        padding: 0 0 1em;
     }   
 
     .card-columns {
@@ -186,13 +197,12 @@ footer{
     
     /* About Image */
        .media img{
-        width: 35%;
-        padding: 0 2.5% 1em 2.5%;
+        width: 40%;
+        padding: 0 0 1em;
     }
 
     .card-columns {
         column-count: 2;
-        padding: 0 2%;
       }
  
 
